// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Information should return information of John Doe 1`] = `
<article
  className="sc-eCApnc gRlSpJ"
>
  <div
    className="sc-cxNHIi ivfhdD"
  >
    <header
      className="sc-efHYUO ernzeX"
    >
      Journalist
    </header>
    <h1
      className="sc-gXfVKN UAOGD"
    >
      John
       
      Doe
    </h1>
    <div
      className="sc-iIgjPs ercSyr"
    >
       
      <p>
        test 2
      </p>
       
    </div>
  </div>
</article>
`;

exports[`Main Information should return information of Paul Couthouis 1`] = `
<article
  className="sc-eCApnc gRlSpJ"
>
  <div
    className="sc-cxNHIi ivfhdD"
  >
    <header
      className="sc-efHYUO ernzeX"
    >
      Développeur Front-End
    </header>
    <h1
      className="sc-gXfVKN UAOGD"
    >
      Paul
       
      Couthouis
    </h1>
    <div
      className="sc-iIgjPs ercSyr"
    >
       
      <p>
        test 1
      </p>
       
    </div>
  </div>
</article>
`;
